# clarification-trees-v3

./: .env  .gitignore  pyproject.toml
config/: cold_start_config.yaml  config.yaml  evaluate_mcts_c.yaml  generate_trees.yaml  generate_trees_sft_rl.yaml  iterative_rl_dpo.yaml  iterative_rl_sft.yaml  prompt_overrides.yaml  sft_tree_config.yaml
config/answer_model/: qwen_3_vl_235b.yaml  qwen_3_vl_32b.yaml  qwen_3_vl_8b.yaml
config/answer_model/base/: qwen_3_vl_235b.yaml  qwen_3_vl_32b.yaml  (+2 more)
config/clarification_model/: qwen_3_vl_2b.yaml  qwen_3_vl_32b_lora_bfloat16.yaml  qwen_3_vl_32b_lora_large_bfloat16.yaml  qwen_3_vl_32b_lora_small.yaml  qwen_3_vl_32b_prompt_tune.yaml  qwen_3_vl_4b.yaml  qwen_3_vl_8b.yaml  qwen_3_vl_8b_bfloat16.yaml  qwen_3_vl_8b_dora_small.yaml  qwen_3_vl_8b_lora_no_quant.yaml  qwen_3_vl_8b_lora_small.yaml  qwen_3_vl_8b_prompt_tune.yaml
config/semantic_cluster_model/: bidirectional_entailment_clusterer.yaml  hybrid_clusterer.yaml  sentence_transformers_all_MiniLM_L6_v2.yaml
notebooks/: test_simple_tree_dataset.ipynb
scripts/streamlit/: prompt_optimizer_app.py
scripts/training/: iterative_rl_dpo.py  iterative_rl_sft.py  train_clarification_lora.py  train_clarification_sft_tree.py
scripts/utility/: eval_trees.py  evaluate_mcts_c.py  generate_trees.py  generate_trees_start_remote_llms.py  merge_lora.py  visualize_iterations.py  visualize_trees.py
src/clarification_trees_v3/: definitions.py  utils.py
wandb/: latest-run
wandb/run-20260616_133411-rwu6n2wi/: run-rwu6n2wi.wandb
wandb/run-20260616_133922-3j8twyu8/: run-3j8twyu8.wandb
(+39 files in other folders)
