[project]
name = "clarification-trees-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aidan Dempster", email = "aidan.dempster@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "torch==2.10.0",
    "jaxtyping>=0.3.9",
    "torchvision>=0.24.1",
    "transformers",
    "vllm",
    "dotenv>=0.9.9",
    "wandb>=0.27.2",
    "hydra-core>=1.3.3",
    "pillow>=12.2.0",
    "requests>=2.34.2",
    "tqdm>=4.68.2",
    "accelerate>=1.14.0",
    "pandas>=2.3.3",
    "sentence-transformers>=5.6.0",
    "peft>=0.19.1",
    "spacy>=3.8.14",
    "graphviz>=0.21",
    "codetiming>=1.4.0",
    "bitsandbytes>=0.49.2",
    "en-core-web-sm",
    "ipykernel>=7.3.0",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
# This forces the resolver to use these EXACT versions for these packages,
# silently ignoring any conflicting requirements from vllm or other dependencies.
override-dependencies = [
    "transformers==5.10.2",
    "vllm==0.17.0"
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
